force-app/main/default/objects/EmailEvent__c/EmailEvent__c.object-meta.xml
<CustomObject>
    <label>Detailed Email Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detailed Email Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>