force-app/main/default/objects/EmailEvent__c/fields/BounceReason__c.field-meta.xml
<CustomField>
    <fullName>BounceReason__c</fullName>
    <label>Bounce Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>