force-app/main/default/objects/EmailEvent__c/fields/ClickedURL__c.field-meta.xml
<CustomField>
    <fullName>ClickedURL__c</fullName>
    <label>Clicked URL</label>
    <type>Url</type>
</CustomField>