force-app/main/default/objects/EmailEvent__c/fields/EmailCampaign__c.field-meta.xml
<CustomField>
    <fullName>EmailCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Campaign</label>
    <referenceTo>EmailCampaign__c</referenceTo>
    <relationshipLabel>Detailed Email Events</relationshipLabel>
    <relationshipName>EmailEvents</relationshipName>
    <type>Lookup</type>
</CustomField>