force-app/main/default/objects/EmailEvent__c/fields/EmailCampaignReceival__c.field-meta.xml
<CustomField>
    <fullName>EmailCampaignReceival__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Campaign Snapshot</label>
    <referenceTo>EmailCampaignReceival__c</referenceTo>
    <relationshipLabel>Detailed Email Events</relationshipLabel>
    <relationshipName>EmailEvents</relationshipName>
    <type>Lookup</type>
</CustomField>