force-app/main/default/objects/EmailEvent__c/fields/EmailDelivery__c.field-meta.xml
<CustomField>
    <fullName>EmailDelivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmailDelivery</label>
    <referenceTo>EmailDelivery__c</referenceTo>
    <relationshipLabel>Detailed Email Events</relationshipLabel>
    <relationshipName>EmailEvents</relationshipName>
    <type>Lookup</type>
</CustomField>