force-app/main/default/objects/EmailEvent__c/fields/EmailType__c.field-meta.xml
<CustomField>
    <fullName>EmailType__c</fullName>
    <label>Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EmailCampaign</fullName>
                <label>Email Campaign</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>