force-app/main/default/objects/EmailEvent__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>open</fullName>
                <label>Open</label>
            </value>
            <value>
                <fullName>click</fullName>
                <label>Click</label>
            </value>
            <value>
                <fullName>bounce</fullName>
                <label>Bounce</label>
            </value>
            <value>
                <fullName>unsubscribe</fullName>
                <label>Unsubscribe</label>
            </value>
            <value>
                <fullName>dropped</fullName>
                <label>Dropped</label>
            </value>
            <value>
                <fullName>delivered</fullName>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>deferred</fullName>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>spamreport</fullName>
                <label>Spam report</label>
            </value>
            <value>
                <fullName>group_unsubscribe</fullName>
                <label>Group unsubscribe</label>
            </value>
            <value>
                <fullName>group_resubscribe</fullName>
                <label>Group resubscribe</label>
            </value>
            <value>
                <fullName>processed</fullName>
                <label>Processed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>