force-app/main/default/objects/EmailEvent__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <label>Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>